about dan hobi fix

--- a/Portofolio/index.html
+++ b/Portofolio/index.html
@@ -325,7 +325,7 @@
         </div>
 
         <!-- about me -->
-        <div id="about-main-container" style="height: 4vh; display=none;"></div>
+        <div id="about-main-container" style="height: 4vh"></div>
 
         <div class="cek9 about-me-container">
           <div class="about-container-1 cek9">
@@ -353,7 +353,7 @@
         </div>
 
         <!-- hoby  -->
-        <div id="hobi-main-container" style="height: 4vh; display=none;"></div>
+        <div id="hobi-main-container" style="height: 4vh"></div>
         <div class="cek9 about-me-container">
           <div class="about-container-1 cek9" style="margin-bottom: 5vh">
             <h3 class="clr-black sub-judul">My Hobby</h3>
@@ -470,18 +470,12 @@
         </div>
 
         <!-- portofolio  -->
-        <div
-          id="portofolio-main-container"
-          style="height: 4vh; display=none;"
-        ></div>
+        <div id="portofolio-main-container" style="height: 4vh"></div>
 
         <div class="cek9 portofolio-container"></div>
 
         <!-- contact me  -->
-        <div
-          id="contact-me-main-container"
-          style="height: 4vh; display=none;"
-        ></div>
+        <div id="contact-me-main-container" style="height: 4vh"></div>
 
         <div class="cek9 contact-me-container"></div>
       </div>
