--- a/Web Portofolio/bim-bim/bimaPortofolio.html
+++ b/Web Portofolio/bim-bim/bimaPortofolio.html
@@ -32,6 +32,7 @@
                 <button
                   onclick="window.location='bimaPortofolio.html#about-main-container';"
                   class="nav-item-btn bold-isi hitam-abu isi"
+                  <!-- by bima -->
                 >
                   About
                 </button>
@@ -112,6 +113,7 @@
 
               <input
                 style="display: none"
+                <!-- by bima -->
                 type="checkbox"
                 name="menu"
                 id="menu"
@@ -240,6 +242,7 @@
         <div class="intro-kosong" style="height: 10vh"></div>
         <div class="cek9 intro-container">
           <div class="cek9 intro-logo">
+            <!-- by bima -->
             <!-- linkidln -->
             <svg
               xmlns="http://www.w3.org/2000/svg"
@@ -402,6 +405,7 @@
             <div class="about-container-2 hobi-item">
               <svg
                 xmlns="http://www.w3.org/2000/svg"
+                   <!-- by b i m a -->
                 width="2.5vw"
                 height="2.5vw"
                 fill="currentColor"
