--- a/Web Portofolio/bim-bim/bimaPortofolio.html
+++ b/Web Portofolio/bim-bim/bimaPortofolio.html
@@ -240,6 +240,7 @@
         <div class="intro-kosong" style="height: 10vh"></div>
         <div class="cek9 intro-container">
           <div class="cek9 intro-logo">
+            <!-- by bima -->
             <!-- linkidln -->
             <svg
               xmlns="http://www.w3.org/2000/svg"
@@ -537,9 +538,9 @@
                       </p>
                       <div
                         class="bg-blue clr-2 container-btn-contactme container-btn-portofolio"
+                        onclick="window.location='https://github.com/bmsptra24/Web-Portfolio'"
                       >
                         <button
-                          onclick="window.location='https://github.com/bmsptra24/Web-Portfolio'"
                           class="btn-contactme btn-portofolio clr-2 isi-1"
                         >
                           Lihat
@@ -583,9 +584,9 @@
                       </p>
                       <div
                         class="bg-blue clr-2 container-btn-contactme container-btn-portofolio"
+                        onclick="window.location='https://github.com/bmsptra24/Web-Portfolio'"
                       >
                         <button
-                          onclick="window.location='https://github.com/bmsptra24/Web-Portfolio'"
                           class="btn-contactme btn-portofolio clr-2 isi-1"
                         >
                           Lihat
@@ -630,9 +631,9 @@
                       </p>
                       <div
                         class="bg-blue clr-2 container-btn-contactme container-btn-portofolio"
+                        onclick="window.location='https://github.com/bmsptra24/Web-Portfolio'"
                       >
                         <button
-                          onclick="window.location='https://github.com/bmsptra24/Web-Portfolio'"
                           class="btn-contactme btn-portofolio clr-2 isi-1"
                         >
                           Lihat
