--- a/Web Portofolio/index.html
+++ b/Web Portofolio/index.html
@@ -49,7 +49,7 @@
       <div class="cek1 subcontainer tombol-2">
         <div class="cek1 overlay-button"></div>
         <div
-          onclick="window.location='nilai.html';"
+          onclick="window.location='jasmin/index.html';"
           id="tombol2"
           class="cek overlay-button"
         ></div>
